# dorimu-bot-sdk

./: .gitignore  Cargo.toml  README.md  README_old.md
.github/: dependabot.yml
bot_app/: Cargo.toml
bot_app/src/: auth.rs  command.rs  config.rs  main.rs  store.rs
examples/: quickstart.rs  webhook.rs  webhook_advanced.rs  webhook_prod.rs
scripts/: run_bot_app.ps1  run_webhook_prod.ps1
src/: app.rs  config.rs  container.rs  error.rs  event.rs  handler.rs  middleware.rs  openapi.rs  replying.rs  router.rs  runner.rs  types.rs  webhook.rs
src/app/: app.rs  commands.rs  config.rs  context.rs  handler.rs  mod.rs
src/app/commands/: defining.rs  mod.rs  replying.rs  store.rs
src/axum/: runner.rs
src/commands/: defining.rs  mod.rs
src/macros/: command.rs
tests/: context.rs  events.rs  webhook_validation.rs
